@@ -1,5 +1,5 @@
-EXTRA_DIST = NetworkManager
+EXTRA_DIST = NetworkManager NetworkManagerDispatcher
 
 initddir = $(sysconfdir)/rc.d/init.d
-initd_SCRIPTS = NetworkManager
+initd_SCRIPTS = NetworkManager NetworkManagerDispatcher
 
